# FlexiTeX

./: .gitignore  CITATION.cff  README.md  example-config.yml  pyproject.toml  requirements.txt
src/flexitex/: main.py
src/flexitex/core/: config.py  graphics_move_manager.py  move_manager.py  processor.py  writer.py
src/flexitex/flexiast/: builder.py  evaluator.py  node.py  structure.py
src/flexitex/generators/: dot_generator.py  latex_generator.py
src/flexitex/parsing/: parser.py  preprocess.py
